# spell-it-out

./: .gitignore  Makefile  README.md  data.go  develop.sh  go.mod  main.go  pyproject.toml  routes.go
internal/spell/: spell.go  spell_test.go
internal/spell/data/: de.json  en.json
templates/: index.html  row.html  spell.html  spelling.html
