[tool.poetry]
name = "spell_it_out"
version = "0.1.0"
description = "A tool helping you to phonetically spell a text"
authors = ["Constantin Rigu <constantin.c.rigu@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
